# faKiBe

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Tree.cpp  Tree.h
unit_tests/: CMakeLists.txt  main.cpp
